:sparkles: Add page effect

--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,7 @@
   --lineHeight-relaxed: 1.625;
   /* 1.200 Minor Third Type Scale */
   --fontSize-0: 0.833rem;
-  --fontSize-1: 1rem;
+  --fontSize-1: 1.2rem;
   --fontSize-2: 1.2rem;
   --fontSize-3: 1.44rem;
   --fontSize-4: 1.728rem;
@@ -58,6 +58,10 @@
   --color-heading: #1a202c;
   --color-heading-black: black;
   --color-accent: #d1dce5;
+}
+
+.img {
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 }
 
 /* Prose */
