:sparkles: Setup logo

--- a/src/style.css
+++ b/src/style.css
@@ -147,6 +147,7 @@ table thead tr th {
 }
 
 .global-wrapper {
+  margin-top: 100px !important;
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
   padding: var(--spacing-10) var(--spacing-5);
